--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@vercel/analytics": "^1.4.1",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "i18next": "^24.2.0",
