--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@vercel/analytics": "^1.4.1",
+    "@vercel/blob": "^0.27.0",
     "@vercel/speed-insights": "^1.1.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
