--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/speed-insights": "^1.1.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "firebase": "^11.2.0",
     "i18next": "^24.2.0",
     "next": "^15.1.3",
     "next-i18next": "^15.4.1",
